--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "rest_api_features",
-  "version": "1.0.0",
-  "description": "RESTful API",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Akhilesh Muthusamy",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "dotenv": "^8.0.0"
-  }
+	"name": "rest_api_features",
+	"version": "1.0.0",
+	"description": "RESTful API",
+	"main": "server.js",
+	"scripts": {
+		"start:dev": "nodemon --exec \"node -r dotenv/config\" server.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "Akhilesh Muthusamy",
+	"license": "ISC",
+	"dependencies": {
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
+		"express": "^4.17.1"
+	},
+	"devDependencies": {
+		"dotenv": "^8.0.0"
+	}
 }
